--- a/assets/pug/pages/template/alert.pug
+++ b/assets/pug/pages/template/alert.pug
@@ -55,8 +55,9 @@ html(lang='en')
                       div.flex.flex-col.flex-wrap.gap-2
                         div.flex.flex-col.flex-wrap.gap-2.bg-primary-light.px-4.py-3.rounded.text-primary.w-full(role='alert')
                           p 
-                            span.font-extrabold Harry up, 
-                            | Sale is live now !!
+                            | One of 
+                            span.font-extrabold YouTube's  
+                            |  most crucial ranking factors is Watch Time.
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
@@ -84,8 +85,8 @@ html(lang='en')
                       div.flex.flex-col.flex-wrap.gap-2
                         div.flex.border.flex-col.flex-wrap.gap-2.border.border-primary.px-4.py-3.rounded.text-primary.w-full(role='alert')
                           p 
-                            span.font-extrabold Harry up, 
-                            | Sale is live now !!
+                            | Oh snap! Change a few things up 
+                            span.font-extrabold Notification check
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -113,8 +114,8 @@ html(lang='en')
                       div.flex.flex-col.flex-wrap.gap-2
                         div.flex.flex-col.flex-wrap.gap-2.bg-success.px-4.py-3.rounded.text-white.w-full(role='alert')
                           p 
-                            span.font-extrabold Harry up, 
-                            | Sale is live now !!
+                            span.font-extrabold Well done!  
+                            | You successfully read this important message.
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -141,8 +142,8 @@ html(lang='en')
                         div.flex.items-center.bg-warning.px-4.py-3.rounded.text-white.w-full(role='alert')
                           +SVG_ICON("Info-Circle","w-[1.25rem] h-[1.25rem] stroke-white mr-2")
                           p 
-                            span.font-extrabold Harry up, 
-                            | Sale is live now !!
+                            | Hidden material You ought to update a few of the fields listed below.
+
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -307,6 +308,6 @@ html(lang='en')
         // Page Body End 
         +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
 
-include ../../components/customizer
+      include ../../components/customizer
 
-include ../../layout/footer-files
+  include ../../layout/footer-files
