--- a/assets/pug/pages/template/wow-animation.pug
+++ b/assets/pug/pages/template/wow-animation.pug
@@ -59,7 +59,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.items-center.justify-center.flex-wrap.gap-2.w-full.overflow-hidden
                         div
-                          div.circle(class="wow animate__rollIn" data-wow-delay="0.1s" data-wow-duration="1.5s")
+                          div.circle.primary-circle(class="wow animate__rollIn" data-wow-delay="0.1s" data-wow-duration="1.5s")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -70,35 +70,35 @@ html(lang='en')
                           |       &lt;div class="circle wow animate__rollIn" data-wow-delay="0.1s" data-wow-duration="1.5s""&gt;&lt;/div&gt;
                           |   &lt;/div&gt; 
                           |&lt;/div&gt; 
-                      div.col-span-4(class="2xl:col-span-6 2md:col-span-12")
-                        div.card.tabs
-                          div.card-header.pb-2.header-bottom-border
-                            div.flex.flex-col
-                              h3.text-lg.font-bold ShakeX
-                              p To create ShakeX animation, add 
-                                strong woo    
-                                |   & 
-                                strong animate__shakeX   
-                                |   class.
-                              div.preview-code.tab-links
-                                button.p-0.tab.tab-lifted.tab-active(data-tabFilter="1" class="tab-link") Preview
-                                button.p-0.tab.tab-lifted(data-tabFilter="2" class="tab-link tab-2") Html
-                          div.card-body                                   
-                            div.tabs-content
-                              div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
-                                div.flex.items-center.justify-center.flex-wrap.gap-2.w-full.overflow-hidden
-                                  div
-                                    div.circle(class="wow animate__shakeX" data-wow-delay="0.1s" data-wow-duration="1.5s")
-                              div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
-                                button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
-                                  i(data-feather="clipboard")
-                                pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
-                                  code(class="dark:bg-sidebar-dark2")
-                                    |&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
-                                    |   &lt;div&gt; 
-                                    |       &lt;div class="circle wow animate__shakeX" data-wow-delay="0.1s" data-wow-duration="1.5s""&gt;&lt;/div&gt;
-                                    |   &lt;/div&gt; 
-                                    |&lt;/div&gt; 
+            div.col-span-4(class="2xl:col-span-6 2md:col-span-12")
+              div.card.tabs
+                div.card-header.pb-2.header-bottom-border
+                  div.flex.flex-col
+                    h3.text-lg.font-bold ShakeX
+                    p To create ShakeX animation, add 
+                      strong woo    
+                      |   & 
+                      strong animate__shakeX   
+                      |   class.
+                    div.preview-code.tab-links
+                      button.p-0.tab.tab-lifted.tab-active(data-tabFilter="1" class="tab-link") Preview
+                      button.p-0.tab.tab-lifted(data-tabFilter="2" class="tab-link tab-2") Html
+                div.card-body                                   
+                  div.tabs-content
+                    div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
+                      div.flex.items-center.justify-center.flex-wrap.gap-2.w-full.overflow-hidden
+                        div
+                          div.circle.secondary-circle(class="wow animate__shakeX" data-wow-delay="0.1s" data-wow-duration="1.5s")
+                    div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
+                      button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
+                        i(data-feather="clipboard")
+                      pre(class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2")
+                        code(class="dark:bg-sidebar-dark2")
+                          |&lt;div class="flex flex-wrap items-center justify-center w-full gap-2"&gt; 
+                          |   &lt;div&gt; 
+                          |       &lt;div class="circle wow animate__shakeX" data-wow-delay="0.1s" data-wow-duration="1.5s""&gt;&lt;/div&gt;
+                          |   &lt;/div&gt; 
+                          |&lt;/div&gt; 
 
             div.col-span-4(class="2xl:col-span-6 2md:col-span-12")
               div.card.tabs
@@ -118,7 +118,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.items-center.justify-center.flex-wrap.gap-2.w-full.overflow-hidden
                         div
-                          div.circle(class="wow animate__heartBeat" data-wow-delay="0.1s" data-wow-duration="1.5s")
+                          div.circle.info-circle(class="wow animate__heartBeat" data-wow-delay="0.1s" data-wow-duration="1.5s")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -148,7 +148,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.items-center.justify-center.flex-wrap.gap-2.w-full.overflow-hidden
                         div
-                          div.circle(class="wow animate__zoomInLeft" data-wow-delay="0.1s" data-wow-duration="1.5s")
+                          div.circle.warning-circle(class="wow animate__zoomInLeft" data-wow-delay="0.1s" data-wow-duration="1.5s")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -178,7 +178,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.items-center.justify-center.flex-wrap.gap-2.w-full.overflow-hidden
                         div
-                          div.circle(class="wow animate__zoomOutRight" data-wow-delay="0.1s" data-wow-duration="1.5s")
+                          div.circle.primary-circle(class="wow animate__zoomOutRight" data-wow-delay="0.1s" data-wow-duration="1.5s")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -208,7 +208,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.items-center.justify-center.flex-wrap.gap-2.w-full.overflow-hidden
                         div
-                          div.circle(class="wow animate__lightSpeedInRight" data-wow-delay="0.1s" data-wow-duration="1.5s")
+                          div.circle.secondary-circle(class="wow animate__lightSpeedInRight" data-wow-delay="0.1s" data-wow-duration="1.5s")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -238,7 +238,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.items-center.justify-center.flex-wrap.gap-2.w-full.overflow-hidden
                         div
-                          div.circle(class="wow animate__fadeInDownBig" data-wow-delay="0.1s" data-wow-duration="1.5s")
+                          div.circle.danger-circle(class="wow animate__fadeInDownBig" data-wow-delay="0.1s" data-wow-duration="1.5s")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -268,7 +268,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.items-center.justify-center.flex-wrap.gap-2.w-full.overflow-hidden
                         div
-                          div.circle(class="wow animate__fadeInDown" data-wow-delay="0.1s" data-wow-duration="1.5s")
+                          div.circle.warning-circle(class="wow animate__fadeInDown" data-wow-delay="0.1s" data-wow-duration="1.5s")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -298,7 +298,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.items-center.justify-center.flex-wrap.gap-2.w-full.overflow-hidden
                         div
-                          div.circle(class="wow animate__fadeOutRightBig" data-wow-delay="0.1s" data-wow-duration="1.5s")
+                          div.circle.primary-circle(class="wow animate__fadeOutRightBig" data-wow-delay="0.1s" data-wow-duration="1.5s")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -328,7 +328,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.items-center.justify-center.flex-wrap.gap-2.w-full.overflow-hidden
                         div
-                          div.circle(class="wow animate__backOutRight" data-wow-delay="0.1s" data-wow-duration="1.5s")
+                          div.circle.success-circle(class="wow animate__backOutRight" data-wow-delay="0.1s" data-wow-duration="1.5s")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -357,7 +357,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.items-center.justify-center.flex-wrap.gap-2.w-full.overflow-hidden
                         div
-                          div.circle(class="wow animate__backInUp" data-wow-delay="0.1s" data-wow-duration="1.5s")
+                          div.circle.danger-circle(class="wow animate__backInUp" data-wow-delay="0.1s" data-wow-duration="1.5s")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -387,7 +387,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.items-center.justify-center.flex-wrap.gap-2.w-full.overflow-hidden
                         div
-                          div.circle(class="wow animate__slideInUp" data-wow-delay="0.1s" data-wow-duration="1.5s")
+                          div.circle.warning-circle(class="wow animate__slideInUp" data-wow-delay="0.1s" data-wow-duration="1.5s")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white") 
                         i(data-feather="clipboard")
@@ -441,8 +441,8 @@ html(lang='en')
                               |   &lt;script src="../../assets/js/wow.js"&gt; &lt;/script&gt;
                               |   &lt;script src="../../assets/js/wow-custom.js"&gt; &lt;/script&gt;
                     p(class="pt-2") All set&#128525; Now you can see animations will be revealed when the page scrolls.
-          // Page Body End 
-          +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
-include ../../components/customizer
+        // Page Body End 
+        +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
+      include ../../components/customizer
 
-include ../../layout/footer-files
+  include ../../layout/footer-files
