--- a/html/template/fontawesome.html
+++ b/html/template/fontawesome.html
@@ -1005,7 +1005,7 @@
             <div class="col-span-12">
               <div class="card">
                 <div class="card-header border-b-0">
-                  <h3 class="text-lg font-bold">Icons</h3>
+                  <h3 class="text-lg font-bold">Font Awesome Icons</h3>
                 </div>
                 <div class="card-body"> </div>
               </div>
